force-app/main/default/objects/Comment_On_Book__c/Comment_On_Book__c.object-meta.xml
<CustomObject>
    <label>Comment On Book</label>
    <nameField>
        <displayFormat>CB-{00000000}</displayFormat>
        <label>Comment On Book Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments On Book</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>