force-app/main/default/objects/Comment_On_Book__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>Text</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>