force-app/main/default/objects/Comment_On_Book__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>